--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,86 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.background-img{
+  height: 400px;
+  float:left;
+  position:relative;
+  margin-left: 250px;
+  margin-right: 60px;
+  margin-top:60px;
+}
+.background-color{
+  position: absolute;
+  background-color: #1c5380;
+  height: 50%;
+  width:100%;
+}
+.container{
+  width:35%;
+  height:400px;
+  float:left;
+  position:relative;
+  margin-top: 60px;
+}
+.brand{
+  height: 70px;
+  padding:0;
+}
+.log-in{
+  height: 100px;
+  display:table-cell;
+}
+.log-in img{
+  vertical-align: middle;
+}
+.button1{
+  background-color: #1c5380;
+  border-color: #06365f;
+  margin-left:60px;
+  vertical-align: middle;
+  color:white;
+  height: 40px;
+} 
+.text{
+  width:100%;
+  height: 200px;
+  background-image: url("../images/frame.png");
+  padding:0;
+}
+.text h2{
+  color: #06365f;
+  width:60%;
+  padding-left: 30px;
+  padding-top:25px;
+  margin:0;
+}
+.text p {
+  width:80%;
+  padding-left: 30px;
+  font-size:15px;
+}
+.text img {
+  height: 45px; 
+}
+.padding-left-30{
+  padding-left:30px;
+}
+footer{
+  clear: both;
+  text-align:center;
+  padding: 55px 0 5px 0;
+}
+footer a{
+  text-decoration:none;
+  text-transform: uppercase;
+  font-size: 10px;
+  color:#06365f;
+  margin: 0px 10px;
+  font-weight: bold;
+}
+.copy{
+  text-transform: uppercase;
+  font-size: 10px;
+  color:grey;
+  font-weight: bold;
+}
