--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,115 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+header{
+  background-image:url(../images/bgtile.png);
+  width:100%;
+  height:300px;
+}
+section{
+  width:100%;
+  height:350px;
+  background:rgb(255,255,255);
+}
+footer .footerContainer{
+  width:55%;
+  margin:0 auto;
+}
+.footerContainer .large{
+  font-size:12px;
+  
+  
+  font-weight:800;
+  width:16%;
+}
+.footerContainer ul li a {
+  color:#1c5380;
+  text-decoration: none;
+}
+.footerContainer ul li.large a{
+  color:rgb(150,150,150);
+}
+footer li{
+  float:left;
+  width:10.5%;
+  padding:0.5em 0;
+  list-style-type: none;
+  color:#1c5380;
+  font-size:12px;
+  font-weight:800;
+}
+.home{
+  float:right;
+  display: block;
+  width:15%;
+  padding:7px 12px;
+  margin-top:23px;
+  border:1px solid #06365f;
+  text-decoration: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 0px #06365f;
+  color:rgb(255,255,255);
+  background:linear-gradient(#1c5380, #06365f);
+  font-weight:600;
+  
+}
+.home img{
+  vertical-align:middle;
+  
+  margin: -3px 0 0 0;
+}
+.logo{
+  float:right;
+  width:43%;
+  height: 80px;
+  margin-right: 178px;
+  margin-top:144px;
+  
+}
+h2{
+  color:#06365f;
+}
+  
+.thirdParagraph{
+  margin-bottom:35px;
+}
+.imgLogo{
+  float:left;
+}
+.container{
+float:right;
+height:315px;
+border-radius: 5px;
+padding:25px 25px;
+width:40%;
+background-image:url(../images/frame.png);
+background-repeat:no-repeat; 
+background-size:contain;
+margin-right:170px;
+}
+.mobile{
+  float:left;
+  margin-left:170px;
+  margin-top:120px;
+}
+.clearFix{
+  clear:both;
+}
+h1{
+  margin:0;
+}
+/*.container{
+  width:40%;
+  background:rgb(255, 255, 255);
+  height:300px;
+  position:absolute;
+  top:300px;
+  left:600px;
+  border-radius: 5px;
+  padding:25px 25px
+}
+.mobile{
+  position:absolute;
+  top:150px;
+  left:240px;
+}*/
