--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,16 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+.background {
+  background-image: url("background color.png");
+  background-repeat: no-repeat;
+background-position: right top;
+
 }
