--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,25 +3,41 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+*{
+  border: solid 1px; 
 
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  padding: 100px;
-  
   background-color: darkgrey
 }
 header{
-  background-color: lightblue
+  height: 300px;
+  background-color: #06365f;
 }
 section{
-  display: inline;
-  align-content: inherit;
+  margin: 100px;
+  position: absolute;
+  top:-50px ;
+  display: inline-block;
+}
+article{
+  height: 505px;
+  position: relative;
+  display: inline-block;
+
 }
 .brand{
+
+  display: inline-block;
+  position: inherit;
   vertical-align: center;
 }
-button{
+.imageBrand{
+
+}
+.buttonBrand{
   background-image: url("../images/home.png");
   background-repeat: no-repeat;
   background-color: #1c5380;
@@ -31,6 +47,7 @@ button{
   border-radius: 5px;
   height: 50px;
   width: 100px;
+  vertical-align:
 }
 ul{
   list-style: none;
@@ -39,6 +56,7 @@ ul{
 li{
   display: inline;
 }
-ul #copyrigth{
+#copyrigth{
+  display: inlime;
   text-align: right;
 }
