--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,65 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.mainContent{
+  text-align: center;
+  position: absolute;
+}
+
+
+.phones{
+  display: inline-block;
+}
+
+.logo{
+  display: inline-block;
+  align: left;
+}
+
+.instaFrame {
+  background-image: url ("../images/frame.png");
+}
+
+.instaContent{
+  width: 33%;
+  height: 33%;
+  margin: 0 auto;
+  display: inline-block;
+  right: 50%;
+}
+
+p{
+  text-align: left;
+}
+
+.instaBadges{
+  display: inline-block;
+}
+
+.badge{
+  display: inline-block;
+  list-style-type:none;
+}
+
+ .nav-bar-ul{
+   width: 60%;
+   margin: 0 auto; 
+  }
+  
+  .nav-bar-li{
+   list-style-type:none;
+   text-align: left;
+   float: left;
+   width: 10%;
+  }
+  
+  .nav-bar-item{
+    color: #FFFFFF;
+    text-decoration: #FFFFFF;
+    font-size: 1em;
+  }
+
+  footer{
+    
+  }
