--- a/starter-code/main.css
+++ b/starter-code/main.css
@@ -18,25 +18,31 @@ body {
   width: 100%;
   height: 100%;
   background-color: #f5f5f5;
+  margin: 0 auto;
+  float: left;
 }
 .general {
-  padding: 100px;
-  width: 100%;
+  position: static;
+  
+  width: 1000px;
   height: 500px;
+  margin: 100px;
+  margin-left: auto;
+  margin-right: auto;
   
 }
 .phone {
   float: left;
 }
 .section {
-  width: 50%;
+  width: 60%;
   height: 100%;
   float: left;
   margin-left: 80px;
 }
 .title {
   float: left;
-  width: 100%;
+  width: 90%;
 }
 .title img{
   padding-top: 10px;
@@ -46,7 +52,7 @@ body {
   background-image: url("frame.png");
   background-repeat: no-repeat;
   background-size: contain;
-  width: 100%;
+  width: 90%;
 }
 .content h1 {
   padding: 30px;
@@ -60,6 +66,7 @@ body {
   padding: 30px;
   padding-top: 0px;
   margin-top: 0px;
+  width: 85%;
 
 }
 
@@ -101,11 +108,15 @@ ul {
   padding: 0;
   text-align: center;
   color: #1c5380;
-  font-weight: 400;
+  font-weight: 500;
   
+}
+.footer {
+  padding-bottom: 100px;
 }
 .footer p {
   float: right;
+  
 }
 .info{
   color: gray;
