--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,42 +3,39 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-*{
-  border: solid 1px; 
+* {
 }
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0;
-  background-color: darkgrey
 }
-header{
+header {
   height: 300px;
   background-color: #06365f;
 }
-section{
+section {
   width: 800px;
   margin: 100px;
   position: absolute;
-  top: -6px; 
-
+  top: -6px;
 }
-aside{
+aside {
   position: relative;
-  display:inline-block;
+  display: inline-block;
 }
-.brand{
+.brand {
   display: inline-block;
   position: relative;
   vertical-align: top;
-  margin: 25px 0 0 25px; 
+  margin: 25px 0 0 25px;
 }
-.imageBrand{
+.imageBrand {
   vertical-align: -webkit-baseline-middle;
   height: 60%;
-  width: 60%; 
+  width: 60%;
 }
-.buttonBrand{
+.buttonBrand {
   background-image: url("../images/home.png");
   background-repeat: no-repeat;
   background-color: #1c5380;
@@ -50,63 +47,59 @@ aside{
   width: 100px;
   display: inline-block;
   position: relative;
-  vertical-align:center;
+  vertical-align: center;
   margin: 10px;
   text-align: right;
   font-size: 109%;
 }
 
-footer{
+footer {
   display: inline;
-
 }
-ul{
+ul {
   list-style: none;
+  margin: 40px 0 0 130px;
 }
-li{
-
-  display: inline;
+li {
+  display: inline-block;
   vertical-align: center;
+  color: #06365f;
+  font-weight: bold;
+  font-size: 80%;
+  margin: 0 5px;
 }
-#copyrigth{
-  position: relative;
-  display: inline;
-  text-align: right;
-  vertical-align: center;
-  width: 30px;
-  height: 40px;
-  
+#copyright {
+  color: grey;
 }
-.promo{
-  margin: 25px 0 0 25px; 
+.promo {
+  margin: 25px 0 0 25px;
   position: relative;
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
   background-size: 100%;
   width: 430px;
-  margin:10px;
+  margin: 10px;
   padding: 15px;
-
 }
-h1{
-width: 70%;
-position: relative;
-margin: 25 0 0 0;
-font-size: 140%;
-font-weight:bold; 
-color: #06365f;
-text-align: center
-vertical-align: -webkit-baseline-middle;
+h1 {
+  width: 70%;
+  position: relative;
+  margin: 25 0 0 0;
+  font-size: 150%;
+  font-weight: bold;
+  color: #06365f;
+  vertical-align: -webkit-baseline-middle;
 }
-article{
-    position: absolute;
-    top: 5px;
-    left: 320px;
-    
+article {
+  position: absolute;
+  top: 5px;
+  left: 320px;
 }
-.store{
+.store {
   position: relative;
   display: inline;
-  margin : 0 35px 0 30px;
-
+  margin: 0 35px 0 30px;
+}
+strong{
+  font-weight: bold;
 }
