--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -2,33 +2,71 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+
+Alejandro Close.
 */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/background-insta.png");
+  background-repeat: repeat-x;
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
 }
 
-.mainContent{
+.main-content{
   text-align: center;
-  position: absolute;
 }
 
+h1{
+  text-align: left;
+  color: #06365f;
+  margin: 10px auto;
+  padding: 0 25px;
+
+}
 
 .phones{
   display: inline-block;
+  margin: 50px;
 }
 
 .logo{
   display: inline-block;
-  align: left;
+  padding: 0;
+  width: 314px;
+  text-align: left;
+  float: left;
 }
 
-.instaFrame {
-  background-image: url ("../images/frame.png");
+.home{
+  display: inline-block;
+  float: right;
+  margin: 20px 15px 0 0;
+  padding: 5px;
+  border: 1px solid #06365f;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-.instaContent{
+.home a{
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.insta-frame{
+  display: inline-block;
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+}
+
+.insta-content{
   width: 33%;
   height: 33%;
   margin: 0 auto;
@@ -38,10 +76,13 @@ body {
 
 p{
   text-align: left;
+  margin: 0 30px 0 15px;
 }
 
-.instaBadges{
+.insta-badges{
   display: inline-block;
+  width: 100%;
+  margin: 0 100px 0 0;
 }
 
 .badge{
@@ -49,24 +90,37 @@ p{
   list-style-type:none;
 }
 
- .nav-bar-ul{
-   width: 60%;
+ .footer-bar-ul{
+   width: 50%;
    margin: 0 auto; 
+   display: block;
   }
   
-  .nav-bar-li{
+  .footer-bar-li{
    list-style-type:none;
    text-align: left;
    float: left;
-   width: 10%;
+   margin-left: 20px;
+   color: #1c5380;
+   font-weight:bold;
   }
+
+  .footer-bar-li a{
+    text-decoration: none;
+    color: #1c5380;
+  }
+
+  .footer-bar-li-copyright{
+    list-style-type:none;
+    text-align: left;
+    float: left;
+    margin-left: 20px;
+    color: #999999;
+    font-weight: 600;
+   }
   
-  .nav-bar-item{
+  .footer-bar-item{
     color: #FFFFFF;
     text-decoration: #FFFFFF;
     font-size: 1em;
-  }
-
-  footer{
-    
   }
