--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,101 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
+  background: #fff url('../images/bgtile.png') repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  letter-spacing: 0.5px;
+}
+
+/*    the big box   */
+.content {
+  margin: 90px auto 0; /*left & right in auto por make a little responsive*/
+  width: 880px;
+
+}
+
+/*    right section   */
+.section-left {
+  float: left;
+  margin-right: 5%; /* make space between left and right section*/
+  margin-bottom: 5%; /* make space between main content and footer*/
+}
+
+/*    right section   */
+.section-right {
+  float: left;
+  width: 500px;
+}
+
+/*    button right section   */
+.log-in-button {
+  float: right;
+  margin: 20px 5px 0 0;
+  background: linear-gradient(#6c90ad, #4a7598);
+  border: 1px solid #1c5380;
+  border-radius: 2px;
+  padding: 5px 7px;
+  position: relative;
+  bottom: 2px;
+}
+
+.log-in-button img {
+  padding-top: 3px;
+}
+
+.log-in-button a {
+  margin-left: 5px;
+  font-size: 14px;
+  /* Relative: move the element relative to where it would normally occur with the extra property 'bottom' to center with px the log in*/
+  position: relative;
+  bottom: 5px;
+  text-decoration: none;
+  color: silver;
+}
+
+/*    information   */
+article h2 {
+  margin-top: 0;
+  font-size: 25px;
+  line-height: 1.2;
+  color: #1c5380;
+}
+
+article {
+  background: url("../images/frame.png") no-repeat;
+  padding: 40px;
+}
+
+article a {
+  margin-right: 20px;
+  position: relative;
+  top: 25px;
+}
+
+
+/*  footer  */
+footer ul {
+  list-style: none;
+  margin: 0 0 20px;
+  text-align: center;
+}
+
+footer ul li {
+  display: inline;
+  margin: 0 10px;
+  font-size: 10px;
+  font-weight: bold;
+  color: silver;
+  text-transform: uppercase;
+}
+
+footer ul li a {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+
+.clear { /* clear the previus floats */
+  clear: both;
 }
