--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -37,8 +37,8 @@ body {
   margin: 20px 5px 0 0;
   background: linear-gradient(#6c90ad, #4a7598);
   border: 1px solid #1c5380;
-  border-radius: 2px;
-  padding: 5px 7px;
+  border-radius: 4px;
+  padding: 5px 10px;
   position: relative;
   bottom: 2px;
 }
@@ -54,7 +54,7 @@ body {
   position: relative;
   bottom: 5px;
   text-decoration: none;
-  color: silver;
+  color: white;
 }
 
 /*    information   */
