--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,94 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 "Open Sans", Helvetica, Arial, sans-serif;
+}
+
+.container{
+  margin: 0 10%;
+
+}
+
+.backgroundColor{
+  height: 300px;
+  width: 80%;
+  margin: 0%;
+  background: linear-gradient(to bottom,rgb(85,125,155), rgb(55,100,130));
+  z-index: -2;
+  position: absolute;
+}
+
+.main{
   margin: 0;
+  padding: 10% 15% 5% 10%;
+}
+
+.imgPhones{
+  float: left;
+}
+
+.lateralInfo{
+  margin-left: 45%;
+}
+
+.lateralText{
+  box-sizing: border-box;
+  padding: 2.5% 12.5% 0% 10%;
+  height: 400px;
+  background: url("../images/frame.png") no-repeat;
+  margin-top: 30px;
+  width: 504px;
+}
+
+#titleLateral{
+  padding-right: 40%;
+  color:rgb(5, 48, 84);
+  line-height: 1.3;
+  margin-top: 7.5%;
+}
+
+.bottomImg{
+  margin: 5% 3% 0% 0;
+}
+
+
+footer{
+  width: 100%;
+  text-align: center;
+}
+
+bottomList{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+
+}
+
+li{
+  display: inline;
+  text-transform: uppercase;
+  margin-right: 10px;
+  font: 800 14px/1.5 "Open Sans", Helvetica, Arial, sans-serif;
+  color: rgb(90,130,160)
+}
+
+.brandImage{
+}
+
+button{
+  height: 40px;
+  width: 90px;
+  border-radius: 5px;
+  background: linear-gradient(to bottom, rgb(85,125,155), rgb(100,150,155));
+  margin-right: 10px;
+  margin-top: 20px;
+  float: right;
+}
+
+.brandHeader{
+  width: 504px;
 }
