--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600');
+
 /*
 Colors to use:
 dark blue: #06365f
@@ -5,6 +7,76 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+h1 {
+    color: #06365f;
+}
+
+.background {
+    background-color: #1c5380;
+    height: 250px;
+}
+
+.general {
+    margin: 0 auto;
+    width: 800px;
+    height: 550px;
+    position: relative;
+    bottom: 130px;
+}
+
+.phone {
+    width: 40%;
+    float: left;
+    height: 530px;
+    float: left;
+}
+
+.right {
+    padding: 0px 40px;
+    box-sizing: border-box;
+}
+
+.logo-nav-bar {
+    width: 60%;
+    height: 115px;
+    float: left;
+    clear: right;
+    padding-top: 10px;
+    padding-left: 0px;
+}
+
+.introduction {
+    background-image: url(/images/frame.png);
+}
+
+.description {
+    background-image: url(/images/frame.png);
+
+}
+
+.footer {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-family: "Montserrat";
+    font-weight: 600;
+    padding-bottom: 50px;
+}
+
+.footer span{
+    margin-left: 10px;
+    color: #1c5380;
+}
+
+.login {
+    background-color:#678daa;
+    border-color: #376185;
+    color: white;
+    padding: 10px;
+    border-radius: 3px;
 }
