--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,92 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin: 0;
+  padding: 0;
+  background: transparent;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+}
+#page {
+  padding: 5% 0;
+  background-color: white;
+  background-image: linear-gradient(to bottom, #3a6890, #386185);
+  background-size: 100% 50%;
+  background-repeat: no-repeat;
+}
+.clear {
+  clear: both;
+}
+.right {
+  float: right;
+  width: 58%;
+}
+header {
+  width: 80%;
+}
+header h1 {
+  color: #3a6890;
+  line-height: 0;
+}
+.brand img {
+  float: left;
+  width: 80%%;
+}
+.brand .btn-home {
+
+}
+.content {
+  width: 80%;
+  padding: 2% 3%;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 3px 5px #ccc;
+}
+
+.content h2 {
+  width: 50%;
+  font-size: 1.35em;
+  color: #386185;
+}
+.content p {
+  margin: 2.5% 0;
+  font-size: 0.95em;
+}
+.stores {
+  margin-top: 25px;
+}
+.stores img {
+
+}
+.big-image {
+  float: left;
+  width: 40%;
+}
+.big-image figure {
+  width: 50%;
+  position: relative;
+  left: 40%;
+}
+.big-image img {
+  width: 100%;
+}
+.footer {
+  margin-top: 50px;
+  text-align: center;
+}
+.footer li {
+  display: inline;
+  margin-right: 15px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-weight: 600;
+}
+.footer .copyright {
+  color: #999;
+}
+.footer a {
+  text-decoration: none;
+  color: #386185;
 }
