--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,70 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header {
+  background: linear-gradient(#1c5380,#1c5380 );
+  height: 30vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+.frame {
+  border-radius: 17px;
+  width: 400px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  float: right;
+}
+
+h2 {
+  padding: 30px 30px 0 30px;
+}
+
+p {
+  margin: 30px;
+  color: #06365f;
+}
+
+.phones {
+  width: 250px;
+  float: left;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.container {
+  width: 700px;
+  margin: 10vh auto;
+}
+
+.brand-name {
+  float: left;
+  margin-left: 50px;
+}
+
+.badge-iphone {
+  float: left;
+  margin-left: 30px;
+}
+
+.badge-android {
+  float: right;
+  margin-right: 30px;
+}
+
+.footer {
+  margin-top: 50px;
+  color: #1c5380;
+  width: 100wv;
+  text-align: center;
+}
+
+.bolder {
+  font-weight: bold;
+}
