--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,72 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header button{
+  background-color: #06365f;
+  text-emphasis-color: white;
+  float: center;
+  clear: none;
+}
+.logIn{
+  color: white;
+  font-size: 300xp;
+ 
+  clear: none;
+}
+
+#page{
+  position: fixed;
+  top: 0;
+  left: 0;
+    width: 100%;
+    height: 30%;
+    background-color: rgb(18, 86, 136); 
+}
+
+.header{
+  align-items: center;
+
+}
+
+.container{
+  float:right;
+  width: 60%;
+  margin-left: 15%;
+  margin-top: 5%;
+  text-align: left;
+  width: 600px;
+  border: white;
+  padding: 35px;
+   margin: 50px;
+
+}
+.content{
+  
+  background-color:white;
+  text-align: left;
+  padding: 2%;
+  text-emphasis-color:#06365f;
+}
+.leftSide{
+  float:left;
+  width:10%;
+  margin-left: 10%;
+  margin-top: 5%;
+
+}
+.footer1{
+  text-align: center;
+  margin-top:10%;
+  margin-left:15%;
+  width:80%;
+}
+.footer2{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10%;
+  margin-left:10%;
+}
