--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,90 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#page {
+  background: linear-gradient( #1c5380,#06365f);
+  height:20vh;
+  padding:100px;
+}
+
+.left {
+  float:left;
+  width:50%;
+  height:450px;
+}
+
+.right {
+  float:left;
+  width:50%;
+
+}
+
+.header img
+{float:left;
+  width:50%;
+  margin-bottom: 50px;
+}
+
+button {
+color:white;
+background: linear-gradient( #567ea1,#06365f);
+margin-top:2px;
+margin-bottom:2px;
+margin-left:70px;
+float:left;
+border: 1px solid #06365f;
+width:30%;
+text-align:center;
+line-height:50px;
+height: 30px;
+font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+button img{
+  float:left; 
+}
+
+.frame {
+  background-image:url(/starter-code/images/frame.png); 
+  float:left;
+}
+
+.content {
+  float:left;
+  position:relative;
+  padding-left:20px;
+  background-color:white; 
+  border-radius:10px;
+}
+
+h1{
+  color:#06365f;
+}
+
+.store img{
+  float:left;
+  margin:10px 10px 10px 10px;
+}
+
+
+.clearfix {clear:both;}
+
+footer {clear:both;
+  padding-top:100px;
+  }
+
+ul {
+  text-align:center;
+}
+ul li{
+  display:inline-block;
+  text-transform: uppercase;
+  text-decoration-style: bold;
+  color:#06365f;
+  size:10px;
+}
+
+.copyright{
+  color:grey;
+}
